@@ -2,5 +2,5 @@
 [% IF artistid -%]
 [%    button({ text => 'Create CD', url => uri_for_action('cd/create', [artistid]) }) %]<br/>
 [% ELSE -%]
-[%    button({ text => 'List Artists', url => uri_for_action('artist') }) %]<br/>
+[%    button({ text => 'List Artists', url => uri_for_action('artist/list') }) %]<br/>
 [% END -%]
