@@ -1,5 +1,7 @@
 Message: [% exception.original | html %]<br/>
 Thrown by: [% exception.leader %]<br/>
 Created: [% exception.created %]<br />
+Class: [% exception.class %]<br/>
 Version: [% exception.version %]<br/>
+Session updated: [% context.request.session.updated %]<br/>
 Code: [% code %]<br/>
